Fixed Questionnaire being off centre

--- a/css/agency.css
+++ b/css/agency.css
@@ -563,24 +563,24 @@ header.masthead .intro-text .intro-heading {
   }
 }
 
-.team-member {
+.questionnaire-member {
   margin-bottom: 50px;
   text-align: center;
 }
 
-.team-member img {
+.questionnaire-member img {
   width: 225px;
   height: 225px;
   border: 7px solid rgba(0, 0, 0, 0.1);
 }
 
-.team-member h4 {
+.questionnaire-member h4 {
   margin-top: 25px;
   margin-bottom: 0;
   text-transform: none;
 }
 
-.team-member p {
+.questionnaire-member p {
   margin-top: 0;
 }
 
